make username/project not required in schemas/APIs
